修改弃用的方法，改用新特性